@@ -206,7 +206,7 @@ exportClasses("acopula",
 ## Generics, functions and acopula - family objects defined in this package
 export("copAMH", "copClayton", "copFrank", "copGumbel", "copJoe"
        , .ac.shortNames, .ac.longNames, .ac.objNames, .ac.classNames
-       ,"getAcop"
+       ,"getAcop", "getAname"
        ,"cacopula", "dnacopula", "pnacopula", "rnacopula", "rnchild"
        ## estimation
        ,"coeffG" ## , "polyG", "polyJ", "signFF"
